// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`postgresql-cubestore HTTP Transport Empty partitions: Empty partitions 1`] = `Array []`;

exports[`postgresql-cubestore HTTP Transport Rolling Mixed With Dimension No Granularity: Rolling Mixed With Dimension No Granularity 1`] = `
Array [
  Object {
    "visitors.checkinsRollingTotal": null,
    "visitors.source": "some",
  },
]
`;

exports[`postgresql-cubestore HTTP Transport Rolling Mixed With Dimension: Rolling Mixed With Dimension 1`] = `
Array [
  Object {
    "visitors.checkinsRolling2day": null,
    "visitors.checkinsRollingTotal": "0",
    "visitors.count": null,
    "visitors.createdAt": "2017-01-02T00:00:00.000",
    "visitors.createdAt.day": "2017-01-02T00:00:00.000",
    "visitors.source": null,
  },
  Object {
    "visitors.checkinsRolling2day": null,
    "visitors.checkinsRollingTotal": "0",
    "visitors.count": null,
    "visitors.createdAt": "2017-01-03T00:00:00.000",
    "visitors.createdAt.day": "2017-01-03T00:00:00.000",
    "visitors.source": null,
  },
  Object {
    "visitors.checkinsRolling2day": null,
    "visitors.checkinsRollingTotal": "0",
    "visitors.count": null,
    "visitors.createdAt": "2017-01-04T00:00:00.000",
    "visitors.createdAt.day": "2017-01-04T00:00:00.000",
    "visitors.source": null,
  },
  Object {
    "visitors.checkinsRolling2day": null,
    "visitors.checkinsRollingTotal": "0",
    "visitors.count": null,
    "visitors.createdAt": "2017-01-05T00:00:00.000",
    "visitors.createdAt.day": "2017-01-05T00:00:00.000",
    "visitors.source": null,
  },
  Object {
    "visitors.checkinsRolling2day": "3",
    "visitors.checkinsRollingTotal": "3",
    "visitors.count": "1",
    "visitors.createdAt": "2017-01-03T00:00:00.000",
    "visitors.createdAt.day": "2017-01-03T00:00:00.000",
    "visitors.source": "some",
  },
  Object {
    "visitors.checkinsRolling2day": "3",
    "visitors.checkinsRollingTotal": "3",
    "visitors.count": null,
    "visitors.createdAt": "2017-01-04T00:00:00.000",
    "visitors.createdAt.day": "2017-01-04T00:00:00.000",
    "visitors.source": "some",
  },
  Object {
    "visitors.checkinsRolling2day": "2",
    "visitors.checkinsRollingTotal": "5",
    "visitors.count": "1",
    "visitors.createdAt": "2017-01-05T00:00:00.000",
    "visitors.createdAt.day": "2017-01-05T00:00:00.000",
    "visitors.source": "some",
  },
]
`;

exports[`postgresql-cubestore HTTP Transport Rolling Mixed: Rolling Mixed 1`] = `
Array [
  Object {
    "visitors.checkinsRolling2day": null,
    "visitors.checkinsRollingTotal": "0",
    "visitors.count": null,
    "visitors.createdAt": "2017-01-02T00:00:00.000",
    "visitors.createdAt.day": "2017-01-02T00:00:00.000",
  },
  Object {
    "visitors.checkinsRolling2day": "3",
    "visitors.checkinsRollingTotal": "3",
    "visitors.count": "1",
    "visitors.createdAt": "2017-01-03T00:00:00.000",
    "visitors.createdAt.day": "2017-01-03T00:00:00.000",
  },
  Object {
    "visitors.checkinsRolling2day": "3",
    "visitors.checkinsRollingTotal": "3",
    "visitors.count": null,
    "visitors.createdAt": "2017-01-04T00:00:00.000",
    "visitors.createdAt.day": "2017-01-04T00:00:00.000",
  },
  Object {
    "visitors.checkinsRolling2day": "2",
    "visitors.checkinsRollingTotal": "5",
    "visitors.count": "1",
    "visitors.createdAt": "2017-01-05T00:00:00.000",
    "visitors.createdAt.day": "2017-01-05T00:00:00.000",
  },
]
`;

exports[`postgresql-cubestore HTTP Transport Rolling Prev Period ratio: Rolling Prev Period ratio 1`] = `
Array [
  Object {
    "visitors.createdAt": "2017-02-02T00:00:00.000",
    "visitors.createdAt.day": "2017-02-02T00:00:00.000",
    "visitors.currentMonthToPrevRatio": null,
    "visitors.source": null,
  },
  Object {
    "visitors.createdAt": "2017-02-03T00:00:00.000",
    "visitors.createdAt.day": "2017-02-03T00:00:00.000",
    "visitors.currentMonthToPrevRatio": null,
    "visitors.source": null,
  },
  Object {
    "visitors.createdAt": "2017-02-04T00:00:00.000",
    "visitors.createdAt.day": "2017-02-04T00:00:00.000",
    "visitors.currentMonthToPrevRatio": null,
    "visitors.source": null,
  },
  Object {
    "visitors.createdAt": "2017-02-05T00:00:00.000",
    "visitors.createdAt.day": "2017-02-05T00:00:00.000",
    "visitors.currentMonthToPrevRatio": null,
    "visitors.source": null,
  },
  Object {
    "visitors.createdAt": "2017-02-02T00:00:00.000",
    "visitors.createdAt.day": "2017-02-02T00:00:00.000",
    "visitors.currentMonthToPrevRatio": null,
    "visitors.source": "google",
  },
  Object {
    "visitors.createdAt": "2017-02-03T00:00:00.000",
    "visitors.createdAt.day": "2017-02-03T00:00:00.000",
    "visitors.currentMonthToPrevRatio": null,
    "visitors.source": "google",
  },
  Object {
    "visitors.createdAt": "2017-02-04T00:00:00.000",
    "visitors.createdAt.day": "2017-02-04T00:00:00.000",
    "visitors.currentMonthToPrevRatio": null,
    "visitors.source": "google",
  },
  Object {
    "visitors.createdAt": "2017-02-05T00:00:00.000",
    "visitors.createdAt.day": "2017-02-05T00:00:00.000",
    "visitors.currentMonthToPrevRatio": null,
    "visitors.source": "google",
  },
  Object {
    "visitors.createdAt": "2017-02-02T00:00:00.000",
    "visitors.createdAt.day": "2017-02-02T00:00:00.000",
    "visitors.currentMonthToPrevRatio": "0.6666666666666666",
    "visitors.source": "some",
  },
  Object {
    "visitors.createdAt": "2017-02-03T00:00:00.000",
    "visitors.createdAt.day": "2017-02-03T00:00:00.000",
    "visitors.currentMonthToPrevRatio": "0.6666666666666666",
    "visitors.source": "some",
  },
  Object {
    "visitors.createdAt": "2017-02-04T00:00:00.000",
    "visitors.createdAt.day": "2017-02-04T00:00:00.000",
    "visitors.currentMonthToPrevRatio": null,
    "visitors.source": "some",
  },
  Object {
    "visitors.createdAt": "2017-02-05T00:00:00.000",
    "visitors.createdAt.day": "2017-02-05T00:00:00.000",
    "visitors.currentMonthToPrevRatio": null,
    "visitors.source": "some",
  },
]
`;

exports[`postgresql-cubestore HTTP Transport Rolling Prev Period: Rolling Prev Period 1`] = `
Array [
  Object {
    "visitors.checkinsPrevMonth": "1",
    "visitors.createdAt": "2017-02-05T00:00:00.000",
    "visitors.createdAt.day": "2017-02-05T00:00:00.000",
    "visitors.source": "google",
  },
  Object {
    "visitors.checkinsPrevMonth": "3",
    "visitors.createdAt": "2017-02-02T00:00:00.000",
    "visitors.createdAt.day": "2017-02-02T00:00:00.000",
    "visitors.source": "some",
  },
  Object {
    "visitors.checkinsPrevMonth": "3",
    "visitors.createdAt": "2017-02-03T00:00:00.000",
    "visitors.createdAt.day": "2017-02-03T00:00:00.000",
    "visitors.source": "some",
  },
  Object {
    "visitors.checkinsPrevMonth": "5",
    "visitors.createdAt": "2017-02-04T00:00:00.000",
    "visitors.createdAt.day": "2017-02-04T00:00:00.000",
    "visitors.source": "some",
  },
  Object {
    "visitors.checkinsPrevMonth": "5",
    "visitors.createdAt": "2017-02-05T00:00:00.000",
    "visitors.createdAt.day": "2017-02-05T00:00:00.000",
    "visitors.source": "some",
  },
]
`;

exports[`postgresql-cubestore HTTP Transport Rolling with Quarter granularity: Rolling with Quarter granularity 1`] = `
Array [
  Object {
    "visitors.checkinsRollingTotal": "0",
    "visitors.createdAt": "2017-01-01T00:00:00.000",
    "visitors.createdAt.quarter": "2017-01-01T00:00:00.000",
    "visitors.source": null,
  },
  Object {
    "visitors.checkinsRollingTotal": "1",
    "visitors.createdAt": "2017-01-01T00:00:00.000",
    "visitors.createdAt.quarter": "2017-01-01T00:00:00.000",
    "visitors.source": "google",
  },
  Object {
    "visitors.checkinsRollingTotal": "5",
    "visitors.createdAt": "2017-01-01T00:00:00.000",
    "visitors.createdAt.quarter": "2017-01-01T00:00:00.000",
    "visitors.source": "some",
  },
]
`;

exports[`postgresql-cubestore HTTP Transport Rolling: Rolling 1`] = `
Array [
  Object {
    "visitors.checkinsRollingTotal": "0",
    "visitors.createdAt": "2017-01-02T00:00:00.000",
    "visitors.createdAt.day": "2017-01-02T00:00:00.000",
    "visitors.source": null,
  },
  Object {
    "visitors.checkinsRollingTotal": "0",
    "visitors.createdAt": "2017-01-03T00:00:00.000",
    "visitors.createdAt.day": "2017-01-03T00:00:00.000",
    "visitors.source": null,
  },
  Object {
    "visitors.checkinsRollingTotal": "0",
    "visitors.createdAt": "2017-01-04T00:00:00.000",
    "visitors.createdAt.day": "2017-01-04T00:00:00.000",
    "visitors.source": null,
  },
  Object {
    "visitors.checkinsRollingTotal": "0",
    "visitors.createdAt": "2017-01-05T00:00:00.000",
    "visitors.createdAt.day": "2017-01-05T00:00:00.000",
    "visitors.source": null,
  },
  Object {
    "visitors.checkinsRollingTotal": "3",
    "visitors.createdAt": "2017-01-03T00:00:00.000",
    "visitors.createdAt.day": "2017-01-03T00:00:00.000",
    "visitors.source": "some",
  },
  Object {
    "visitors.checkinsRollingTotal": "3",
    "visitors.createdAt": "2017-01-04T00:00:00.000",
    "visitors.createdAt.day": "2017-01-04T00:00:00.000",
    "visitors.source": "some",
  },
  Object {
    "visitors.checkinsRollingTotal": "5",
    "visitors.createdAt": "2017-01-05T00:00:00.000",
    "visitors.createdAt.day": "2017-01-05T00:00:00.000",
    "visitors.source": "some",
  },
]
`;
